REOPENED267801
[WKTR] `buttons` property is incorrect for mouse events generated through the EventSender interface
https://bugs.webkit.org/show_bug.cgi?id=267801
Summary [WKTR] `buttons` property is incorrect for mouse events generated through the...
Abrar Rahman Protyasha
Reported 2024-01-19 18:39:46 PST
Namely, `eventSender.mouseDown(2)` produces a `mousedown` event with a `buttons` value of 4, rather than 2.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-19 18:39:54 PST
Abrar Rahman Protyasha
Comment 2 2024-01-19 18:40:05 PST
I will attach a test case here shortly.
Abrar Rahman Protyasha
Comment 3 2025-02-01 07:19:31 PST
EWS
Comment 4 2025-02-04 10:34:14 PST
Committed 289800@main (7fe5188140a7): <https://commits.webkit.org/289800@main> Reviewed commits have been landed. Closing PR #39853 and removing active labels.
WebKit Commit Bot
Comment 5 2025-02-04 12:53:01 PST
Re-opened since this is blocked by bug 287039
Note You need to log in before you can comment on or make changes to this bug.