Tools/WebKitTestRunner/InjectedBundle/ios/EventSenderProxyIOS.mm
@@ -29,8 +29,9 @@
 #import "PlatformWebView.h"
 #import "StringFunctions.h"
 #import "TestController.h"
-#import <wtf/RetainPtr.h>
+#import <WebCore/PlatformMouseEvent.h>
 #import <WebKit/WKString.h>
+#import <wtf/RetainPtr.h>
 
 namespace WTR {
 
